oya/plant-maintenance/iac/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oya-plant-maintenance
  labels:
    app: oya-plant-maintenance
    sap-code: "PM"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: oya-plant-maintenance
  template:
    metadata:
      labels:
        app: oya-plant-maintenance
    spec:
      containers:
        - name: service
          image: registry.example/oya-plant-maintenance:0.1.0
          ports:
            - name: h3
              containerPort: 8443
